--- a/index.html
+++ b/index.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Snark Floats</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>Snark Floats</h1>
-    <p>Welcome to the alpha launch of sass, spite, and snark.</p>
+    <p class="subtitle">Where Sass Meets Substance</p>
   </header>
-  <main>
-    <h2>Coming Soon</h2>
-    <p>This site is under active development. Bring snacks.</p>
-  </main>
+
+  <section class="hero">
+    <img src="https://via.placeholder.com/1200x300?text=Banner+Hero+Image" alt="Hero Banner">
+  </section>
+
+  <section class="intro">
+    <p>Welcome to <strong>Snark Floats</strong>, where precision meets petty and the hot takes come with footnotes. If you like your truth bombed and your bullshit called out, you’re in the right place.</p>
+    <p>This blog is powered by sarcasm, rage-logic, and a bottomless pot of coffee. Buckle up.</p>
+  </section>
+
+  <section class="tldr-container">
+    <details>
+      <summary>TL;DR</summary>
+      <ul>
+        <li>🚫 Brilliant Tech, Broken UX</li>
+        <li>🧠 Memory Feature That Forgets You Exist</li>
+        <li>📦 Archive? More Like Hide-and-Seek</li>
+        <li>⏰ An AI That Doesn’t Know What Time It Is</li>
+        <li>🤡 Launch Names So Confusing, Even the AI Needs a Glossary</li>
+      </ul>
+    </details>
+  </section>
+
   <footer>
-    <p>© 2025 Jenifer Jorgenson. Powered by purple, rage, and righteous indignation.</p>
+    <p>&copy; 2025 Jenifer Jorgenson. Powered by Righteous Indignation.</p>
   </footer>
 </body>
 </html>
