--- a/index.html
+++ b/index.html
@@ -11,29 +11,13 @@
     <h1>Snark Floats</h1>
     <p class="subtitle">Where Sass Meets Substance</p>
   </header>
-
   <section class="hero">
     <img src="https://via.placeholder.com/1200x300?text=Banner+Hero+Image" alt="Hero Banner">
   </section>
-
   <section class="intro">
-    <p>Welcome to <strong>Snark Floats</strong>, where precision meets petty and the hot takes come with footnotes. If you like your truth bombed and your bullshit called out, you’re in the right place.</p>
-    <p>This blog is powered by sarcasm, rage-logic, and a bottomless pot of coffee. Buckle up.</p>
+    <p>Welcome to <strong>Snark Floats</strong>, where precision meets petty and the hot takes come with footnotes.</p>
+    <p>This blog is powered by sarcasm, rage-logic, and a bottomless pot of coffee.</p>
   </section>
-
-  <section class="tldr-container">
-    <details>
-      <summary>TL;DR</summary>
-      <ul>
-        <li>🚫 Brilliant Tech, Broken UX</li>
-        <li>🧠 Memory Feature That Forgets You Exist</li>
-        <li>📦 Archive? More Like Hide-and-Seek</li>
-        <li>⏰ An AI That Doesn’t Know What Time It Is</li>
-        <li>🤡 Launch Names So Confusing, Even the AI Needs a Glossary</li>
-      </ul>
-    </details>
-  </section>
-
   <footer>
     <p>&copy; 2025 Jenifer Jorgenson. Powered by Righteous Indignation.</p>
   </footer>
