--- a/about.html
+++ b/about.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About - Snark Floats</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+<head><meta charset="UTF-8"><title>About</title><link rel="stylesheet" href="style.css" /></head>
 <body>
-  <header><h1>About</h1></header>
-  <main>
-    <p>Who is Jenifer Jorgenson? Author. Snark tactician. Exorcist of bad dialogue.</p>
-    <p>This site exists for your amusement and Rachel’s catharsis.</p>
-  </main>
+  <nav><ul><li><a href="index.html">Home</a></li><li><a href="about.html">About</a></li><li><a href="snarklevision.html">Snarklevision</a></li><li><a href="limericks.html">Limericks</a></li></ul></nav>
+  <h1>About Jenifer Jorgenson</h1>
+  <section><h2>What's it about?</h2><p>Pop culture, sarcasm, and corporate mockery.</p></section>
+  <section><h2>Who's Jenifer?</h2><p>Writer. Snark tactician. Cake appreciator.</p></section>
+  <section><h2>Why a blog?</h2><p>Because someone has to say the quiet things out loud.</p></section>
 </body>
 </html>
