--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Snark Floats</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="snarklevision.html">Snarklevision</a></li>
+      <li><a href="limericks.html">Limericks</a></li>
+    </ul>
+  </nav>
   <header>
     <h1>Snark Floats</h1>
     <p class="subtitle">Where Sass Meets Substance</p>
   </header>
-  <section class="hero">
-    <img src="https://via.placeholder.com/1200x300?text=Banner+Hero+Image" alt="Hero Banner">
-  </section>
-  <section class="intro">
-    <p>Welcome to <strong>Snark Floats</strong>, where precision meets petty and the hot takes come with footnotes.</p>
-    <p>This blog is powered by sarcasm, rage-logic, and a bottomless pot of coffee.</p>
-  </section>
-  <footer>
-    <p>&copy; 2025 Jenifer Jorgenson. Powered by Righteous Indignation.</p>
-  </footer>
+  <main>
+    <section>
+      <p>Welcome to the home of snark, strategy, and stubborn honesty. Navigate using the links above!</p>
+    </section>
+  </main>
 </body>
 </html>
