--- a/limericks.html
+++ b/limericks.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Corporate Limericks</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+<head><meta charset="UTF-8"><title>Corporate Limericks</title><link rel="stylesheet" href="style.css" /></head>
 <body>
-  <header><h1>Corporate Limericks of Justice</h1></header>
-  <main>
-    <p>Because OKRs deserve mockery in rhyme.</p>
-  </main>
+  <nav><ul><li><a href="index.html">Home</a></li><li><a href="about.html">About</a></li><li><a href="snarklevision.html">Snarklevision</a></li><li><a href="limericks.html">Limericks</a></li></ul></nav>
+  <h1>Limericks of Justice</h1>
+  <section>
+    <p>They told me to innovate fast,<br>
+    With OKRs vague and half-assed.<br>
+    I delivered a deck,<br>
+    They said, “What the heck?”<br>
+    And fired my intern at last.</p>
+  </section>
 </body>
 </html>
