--- a/snarklevision.html
+++ b/snarklevision.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Snarklevision Presents</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+<head><meta charset="UTF-8"><title>Snarklevision</title><link rel="stylesheet" href="style.css" /></head>
 <body>
-  <header><h1>Snarklevision Presents</h1></header>
-  <main>
-    <p>Where dream casts are better than reality.</p>
-  </main>
+  <nav><ul><li><a href="index.html">Home</a></li><li><a href="about.html">About</a></li><li><a href="snarklevision.html">Snarklevision</a></li><li><a href="limericks.html">Limericks</a></li></ul></nav>
+  <h1>Snarklevision Presents</h1>
+  <section><p>Explore our dreamcasts:</p>
+    <ul>
+      <li><strong>Mass Effect</strong> (Complete)</li>
+      <li><strong>Vampire Chronicles</strong> (In Progress)</li>
+      <li><strong>Black Jewels</strong> (Coming Soon)</li>
+    </ul>
+  </section>
 </body>
 </html>
