--- a/about.html
+++ b/about.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head><meta charset="UTF-8"><title>About</title><link rel="stylesheet" href="style.css" /></head>
-<body>
-  <nav><ul><li><a href="index.html">Home</a></li><li><a href="about.html">About</a></li><li><a href="snarklevision.html">Snarklevision</a></li><li><a href="limericks.html">Limericks</a></li></ul></nav>
-  <h1>About Jenifer Jorgenson</h1>
-  <section><h2>What's it about?</h2><p>Pop culture, sarcasm, and corporate mockery.</p></section>
-  <section><h2>Who's Jenifer?</h2><p>Writer. Snark tactician. Cake appreciator.</p></section>
-  <section><h2>Why a blog?</h2><p>Because someone has to say the quiet things out loud.</p></section>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>About</title><link rel='stylesheet' href='style.css'></head><body><nav><ul><li><a href='index.html'>Home</a></li><li><a href='about.html'>About</a></li><li><a href='snarklevision.html'>Snarklevision</a></li><li><a href='limericks.html'>Limericks</a></li></ul></nav><header><h1>About Jenifer Jorgenson</h1></header><main><section><h2>What's it about?</h2><p>Pop culture, sarcasm, and corporate mockery.</p></section><section><h2>Who's Jenifer?</h2><p>Writer. Snark tactician. Cake appreciator.</p></section><section><h2>Why a blog?</h2><p>Because someone has to say the quiet things out loud.</p></section></main><footer><p>&copy; 2025 Jenifer Jorgenson. Powered by Righteous Indignation.</p></footer></body></html>
