--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Snark Floats</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="snarklevision.html">Snarklevision</a></li>
-      <li><a href="limericks.html">Limericks</a></li>
-    </ul>
-  </nav>
-  <header>
-    <h1>Snark Floats</h1>
-    <p class="subtitle">Where Sass Meets Substance</p>
-  </header>
-  <main>
-    <section>
-      <p>Welcome to the home of snark, strategy, and stubborn honesty. Navigate using the links above!</p>
-    </section>
-  </main>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Snark Floats</title><link rel='stylesheet' href='style.css'></head><body><nav><ul><li><a href='index.html'>Home</a></li><li><a href='about.html'>About</a></li><li><a href='snarklevision.html'>Snarklevision</a></li><li><a href='limericks.html'>Limericks</a></li></ul></nav><header><h1>Snark Floats</h1><p class='subtitle'>Where Sass Meets Substance</p></header><main><section><p>Welcome to the home of snark, strategy, and stubborn honesty. Navigate using the links above!</p></section></main><footer><p>&copy; 2025 Jenifer Jorgenson. Powered by Righteous Indignation.</p></footer></body></html>
