--- a/limericks.html
+++ b/limericks.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head><meta charset="UTF-8"><title>Corporate Limericks</title><link rel="stylesheet" href="style.css" /></head>
-<body>
-  <nav><ul><li><a href="index.html">Home</a></li><li><a href="about.html">About</a></li><li><a href="snarklevision.html">Snarklevision</a></li><li><a href="limericks.html">Limericks</a></li></ul></nav>
-  <h1>Limericks of Justice</h1>
-  <section>
-    <p>They told me to innovate fast,<br>
-    With OKRs vague and half-assed.<br>
-    I delivered a deck,<br>
-    They said, “What the heck?”<br>
-    And fired my intern at last.</p>
-  </section>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Corporate Limericks</title><link rel='stylesheet' href='style.css'></head><body><nav><ul><li><a href='index.html'>Home</a></li><li><a href='about.html'>About</a></li><li><a href='snarklevision.html'>Snarklevision</a></li><li><a href='limericks.html'>Limericks</a></li></ul></nav><header><h1>Limericks of Justice</h1></header><main><section><p>They told me to innovate fast,<br>With OKRs vague and half-assed.<br>I delivered a deck,<br>They said, “What the heck?”<br>And fired my intern at last.</p></section></main><footer><p>&copy; 2025 Jenifer Jorgenson. Powered by Righteous Indignation.</p></footer></body></html>
