--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Snark Floats</title><link rel='stylesheet' href='style.css'></head><body><nav><ul><li><a href='index.html'>Home</a></li><li><a href='about.html'>About</a></li><li><a href='snarklevision.html'>Snarklevision</a></li><li><a href='limericks.html'>Limericks</a></li></ul></nav><header><h1>Snark Floats</h1><p class='subtitle'>Where Sass Meets Substance</p></header><main><section><p>Welcome to the home of snark, strategy, and stubborn honesty. Navigate using the links above!</p></section></main><footer><p>&copy; 2025 Jenifer Jorgenson. Powered by Righteous Indignation.</p></footer></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Snark Floats</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="site-header">
+    <div class="nav-container">
+      <a href="index.html" class="site-title">Snark Floats</a>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="archive.html">Snarky Posts</a></li>
+          <li><a href="about.html">About Snark</a></li>
+          <li><a href="snarklevision.html">Snarklevision</a></li>
+          <li><a href="limericks.html">Limericks of Doom</a></li>
+          <!-- <li><a href="game-lounge.html">Game Lounge</a></li> -->
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section>
+      <h1>Welcome to Snark Floats</h1>
+      <p>This is where the snark begins.</p>
+    </section>
+  </main>
+</body>
+</html>
