--- a/index.html
+++ b/index.html
@@ -9,23 +9,20 @@
 <body>
   <header class="site-header">
     <div class="nav-container">
-      <a href="index.html" class="site-title">Snark Floats</a>
+      <a href="index.html" class="site-title">SNARK FLOATS</a>
       <nav>
         <ul class="nav-links">
           <li><a href="archive.html">Snarky Posts</a></li>
           <li><a href="about.html">About Snark</a></li>
           <li><a href="snarklevision.html">Snarklevision</a></li>
           <li><a href="limericks.html">Limericks of Doom</a></li>
-          <!-- <li><a href="game-lounge.html">Game Lounge</a></li> -->
         </ul>
       </nav>
     </div>
   </header>
   <main>
-    <section>
-      <h1>Welcome to Snark Floats</h1>
-      <p>This is where the snark begins.</p>
-    </section>
+    <h1>Welcome to Snark Floats</h1>
+    <p>This is where the snark begins. And now it has margin breathing room.</p>
   </main>
 </body>
 </html>
