--- a/archive.html
+++ b/archive.html
@@ -1,2 +1,39 @@
-<!-- Snarky Posts Archive -->
-<section class='section section-rose'><h2>All Posts</h2><p>List of every post will go here.</p></section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Snarky Posts</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="site-header">
+    <div class="nav-container">
+      <a href="index.html" class="site-title">SNARK FLOATS</a>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="archive.html" class="active">Snarky Posts</a></li>
+          <li><a href="about.html">About Snark</a></li>
+          <li><a href="snarklevision.html">Snarklevision</a></li>
+          <li><a href="limericks.html">Limericks of Doom</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <h1>Snarky Posts</h1>
+    <section class="card-list">
+      <article class="card">
+        <span class="card-date">April 28, 2025</span>
+        <a href="#" class="card-title">Game Over: How OpenAI Will Lose the War if They Don’t Start Playing to Win</a>
+        <p class="card-excerpt">OpenAI is dominating the AI Olympics with gold medals in model design and technical brilliance—but the event that actually matters is a battle royale for enterprise adoption, and their competitors are already teabagging the fallen.</p>
+      </article>
+      <article class="card">
+        <span class="card-date">April 21, 2025</span>
+        <a href="#" class="card-title">The UX Sacrifices Made for Pretty Dashboards</a>
+        <p class="card-excerpt">Design systems are pretty. But when aesthetic polish trumps user needs, all you're doing is polishing a turd and calling it a feature.</p>
+      </article>
+    </section>
+  </main>
+</body>
+</html>
