--- a/index.html
+++ b/index.html
@@ -20,9 +20,44 @@
       </nav>
     </div>
   </header>
+
   <main>
-    <h1>Welcome to Snark Floats</h1>
-    <p>This is where the snark begins. And now it has margin breathing room.</p>
+    <section>
+      <h1>Latest Snarky Posts</h1>
+      <div class="card-list">
+        <article class="card">
+          <span class="card-date">April 28, 2025</span>
+          <a href="#" class="card-title">Game Over: How OpenAI Will Lose the War</a>
+          <p class="card-excerpt">OpenAI’s model brilliance won’t help them win the enterprise game if they forget how to play it.</p>
+        </article>
+        <article class="card">
+          <span class="card-date">April 21, 2025</span>
+          <a href="#" class="card-title">The UX Sacrifices Made for Pretty Dashboards</a>
+          <p class="card-excerpt">When form beats function, users lose—and pretty dashboards become productivity quicksand.</p>
+        </article>
+        <article class="card">
+          <span class="card-date">April 14, 2025</span>
+          <a href="#" class="card-title">If Your Platform Can’t Remember Me, I Don’t Want It</a>
+          <p class="card-excerpt">A digital identity crisis: when the tools meant to remember you forget you even exist.</p>
+        </article>
+      </div>
+    </section>
+
+    <section>
+      <h2>Featured Extras</h2>
+      <div class="card-list">
+        <article class="card card-dreamcast">
+          <span class="card-date">April 18, 2025</span>
+          <a href="#" class="card-title">Mass Effect: Snark Edition Dreamcast</a>
+          <p class="card-excerpt">Bold recasts, rogue interpretations, and one actor nobody saw coming—but everyone agrees was perfect.</p>
+        </article>
+        <article class="card card-limerick">
+          <span class="card-date">April 15, 2025</span>
+          <a href="#" class="card-title">Limerick: Corporate Clown Fiesta</a>
+          <p class="card-excerpt">There once was a boss in HR, whose ego eclipsed a quasar...</p>
+        </article>
+      </div>
+    </section>
   </main>
 </body>
 </html>
