--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
-    <h1 class="site-title">SNARK FLOATS</h1>
-    <nav>
-      <ul>
-        <li><a href="blog.html">Snarky Posts</a></li>
-        <li><a href="about.html">About Snark</a></li>
-        <li><a href="dreamcasts.html">Snarklevision</a></li>
-        <li><a href="limericks.html">Limericks of Doom</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="header-inner">
+      <h1 class="site-title">SNARK FLOATS</h1>
+      <nav>
+        <ul>
+          <li><a href="blog.html">Snarky Posts</a></li>
+          <li><a href="about.html">About Snark</a></li>
+          <li><a href="dreamcasts.html">Snarklevision</a></li>
+          <li><a href="limericks.html">Limericks of Doom</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <main class="card-container">
     <article class="card blog-post">
