--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Snark Floats</title>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Work+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Work+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -13,9 +13,9 @@
       <h1 class="site-title">SNARK FLOATS</h1>
       <nav>
         <ul>
-          <li><a href="blog.html">Snarky Posts</a></li>
+          <li><a href="posts.html">Snarky Posts</a></li>
           <li><a href="about.html">About Snark</a></li>
-          <li><a href="dreamcasts.html">Snarklevision</a></li>
+          <li><a href="snarklevision.html">Snarklevision</a></li>
           <li><a href="limericks.html">Limericks of Doom</a></li>
         </ul>
       </nav>
@@ -25,20 +25,20 @@
     <article class="card blog-post">
       <div class="badge gold">Snarky Post</div>
       <h2>Why Copilots Crash</h2>
-      <p class="date">June 15, 2025</p>
-      <p class="excerpt">The tool that helps you build things... can't remember what it just built.</p>
+      <p class="card-date">June 15, 2025</p>
+      <p class="card-excerpt">The tool that helps you build things... can't remember what it just built.</p>
     </article>
-    <article class="card dreamcast">
+    <article class="card dream-cast-card">
       <div class="badge teal">Snarklevision Presents</div>
       <h2>Mass Effect Dream Cast</h2>
-      <p class="date">June 10, 2025</p>
-      <p class="excerpt">Shepard, meet Hollywood. A casting exercise in emotional resonance and fan bliss.</p>
+      <p class="card-date">June 10, 2025</p>
+      <p class="card-excerpt">Shepard, meet Hollywood. A casting exercise in emotional resonance and fan bliss.</p>
     </article>
     <article class="card limerick">
       <div class="badge pink">Limericks of Doom</div>
       <h2>Corporate Haikus? Please. We Rhyme in Five Lines.</h2>
-      <p class="date">June 8, 2025</p>
-      <p class="excerpt">There once was a system from hell, where nothing would function too well...</p>
+      <p class="card-date">June 8, 2025</p>
+      <p class="card-excerpt">There once was a system from hell, where nothing would function too well...</p>
     </article>
   </main>
 </body>
