--- a/limericks.html
+++ b/limericks.html
@@ -1,2 +1,1 @@
-<!-- Corporate Limericks Page -->
-<section class='section section-gold'><h2>Corporate Limericks</h2><p>Limerick list will live here.</p></section>
+<!-- Placeholder content for limericks.html -->
