--- a/posts.html
+++ b/posts.html
@@ -1,37 +1,1 @@
-<!-- Sample Blog Post Page with TL;DR -->
-<html>
-<head>
-  <link href='https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&family=Work+Sans:wght@400;500&display=swap' rel='stylesheet'>
-  <style>
-    body { font-family: 'Work Sans', sans-serif; line-height: 1.6; padding: 2rem; }
-    h1, h2 { font-family: 'Raleway', sans-serif; }
-    details summary {
-      font-weight: bold;
-      font-size: 1.1rem;
-      cursor: pointer;
-      color: #2E003E;
-      margin-top: 1.5rem;
-    }
-    details {
-      background: #f4f4f4;
-      border-left: 4px solid #FFD700;
-      padding: 1rem;
-      margin-top: 1rem;
-      max-width: 600px;
-    }
-  </style>
-</head>
-<body>
-  <h1>Brilliant Tech, Broken UX</h1>
-  <p>This is a sample post meant to showcase how the TL;DR block will look on the site.</p>
-
-  <details>
-    <summary>TL;DR</summary>
-    <ul>
-      <li>🚫 Brilliant Tech, Broken UX</li>
-      <li>🧠 Memory Feature That Forgets You Exist</li>
-      <li>🧃 Juice Not Worth the Squeeze</li>
-    </ul>
-  </details>
-</body>
-</html>
+<!-- Placeholder content for posts.html -->
