--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- Placeholder content for index.html -->
+<!DOCTYPE html>
+<html>
+<head>
+<link rel='stylesheet' href='style.css'>
+<title>Snark Floats</title>
+</head>
+<body>
+<header>Welcome to Snark Floats</header>
+</body>
+</html>
