--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<link rel='stylesheet' href='style.css'>
-<title>Snark Floats</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Snark Floats</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Work+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<header>Welcome to Snark Floats</header>
+  <header class="site-header">
+    <div class="header-inner">
+      <h1 class="site-title">SNARK FLOATS</h1>
+      <nav>
+        <ul>
+          <li><a href="posts.html">Snarky Posts</a></li>
+          <li><a href="about.html">About Snark</a></li>
+          <li><a href="snarklevision.html">Snarklevision</a></li>
+          <li><a href="limericks.html">Limericks of Doom</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="card-container">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Why Copilots Crash</h2>
+      <p class="card-date">June 15, 2025</p>
+      <p class="card-excerpt">The tool that helps you build things... can't remember what it just built.</p>
+    </article>
+    <article class="card dream-cast-card">
+      <div class="badge teal">Snarklevision Presents</div>
+      <h2>Mass Effect Dream Cast</h2>
+      <p class="card-date">June 10, 2025</p>
+      <p class="card-excerpt">Shepard, meet Hollywood. A casting exercise in emotional resonance and fan bliss.</p>
+    </article>
+    <article class="card limerick">
+      <div class="badge pink">Limericks of Doom</div>
+      <h2>Corporate Haikus? Please. We Rhyme in Five Lines.</h2>
+      <p class="card-date">June 8, 2025</p>
+      <p class="card-excerpt">There once was a system from hell, where nothing would function too well...</p>
+    </article>
+  </main>
 </body>
 </html>
