--- a/limericks.html
+++ b/limericks.html
@@ -1,1 +1,2 @@
-<!-- Placeholder content for limericks.html -->
+<!-- Corporate Limericks Page -->
+<section class='section section-gold'><h2>Corporate Limericks</h2><p>Limerick list will live here.</p></section>
