--- a/about.html
+++ b/about.html
@@ -1,1 +1,2 @@
-<!-- Placeholder content for about.html -->
+<!-- About Page -->
+<section class='section section-gold'><h2>About the Blog</h2><p>What's it about? Who's Jenifer? Why a blog?</p></section>
