--- a/index.html
+++ b/index.html
@@ -51,32 +51,46 @@
      The tool that helps you build things... can't remember what it just built.
     </p>
    </article>
-   <article class="card dream-cast-card">
-    <div class="badge teal">
+   &lt;!-- &lt;article class="card dream-cast-card"&gt;
+&lt;div class="badge teal"&gt;
      Snarklevision Presents
-    </div>
-    <h2>
+    &lt;/div&gt;
+&lt;h2&gt;
      Mass Effect Dream Cast
-    </h2>
-    <p class="card-date">
+    &lt;/h2&gt;
+&lt;p class="card-date"&gt;
      June 10, 2025
-    </p>
-    <p class="card-excerpt">
+    &lt;/p&gt;
+&lt;p class="card-excerpt"&gt;
      Shepard, meet Hollywood. A casting exercise in emotional resonance and fan bliss.
-    </p>
-   </article>
-   <article class="card limerick">
-    <div class="badge pink">
+    &lt;/p&gt;
+&lt;/article&gt; --&gt;
+   &lt;!-- &lt;article class="card limerick"&gt;
+&lt;div class="badge pink"&gt;
      Limericks of Doom
+    &lt;/div&gt;
+&lt;h2&gt;
+     Corporate Haikus? Please. We Rhyme in Five Lines.
+    &lt;/h2&gt;
+&lt;p class="card-date"&gt;
+     June 8, 2025
+    &lt;/p&gt;
+&lt;p class="card-excerpt"&gt;
+     There once was a system from hell, where nothing would function too well...
+    &lt;/p&gt;
+&lt;/article&gt; --&gt;
+   <article class="card blog-post">
+    <div class="badge gold">
+     Snarky Post
     </div>
     <h2>
-     Corporate Haikus? Please. We Rhyme in Five Lines.
+     Context Is Not Optional
     </h2>
     <p class="card-date">
-     June 8, 2025
+     June 18, 2025
     </p>
     <p class="card-excerpt">
-     There once was a system from hell, where nothing would function too well...
+     In tech, in leadership, in AI—context isn’t just helpful. It’s survival.
     </p>
    </article>
   </main>
