--- a/index.html
+++ b/index.html
@@ -51,34 +51,34 @@
      The tool that helps you build things... can't remember what it just built.
     </p>
    </article>
-   &lt;!-- &lt;article class="card dream-cast-card"&gt;
-&lt;div class="badge teal"&gt;
+   <!-- <;article class="card dream-cast-card">;
+<div class="badge teal">
      Snarklevision Presents
-    &lt;/div&gt;
-&lt;h2&gt;
+  </div>
+<h2>
      Mass Effect Dream Cast
-    &lt;/h2&gt;
-&lt;p class="card-date"&gt;
+  </h2>
+<p class="card-date">
      June 10, 2025
-    &lt;/p&gt;
-&lt;p class="card-excerpt"&gt;
+  </p>
+<p class="card-excerpt">
      Shepard, meet Hollywood. A casting exercise in emotional resonance and fan bliss.
-    &lt;/p&gt;
-&lt;/article&gt; --&gt;
-   &lt;!-- &lt;article class="card limerick"&gt;
-&lt;div class="badge pink"&gt;
+  </p>
+  </article> -->
+   <!-- <article class="card limerick">
+<div class="badge pink">
      Limericks of Doom
-    &lt;/div&gt;
-&lt;h2&gt;
+  </div>
+<h2>
      Corporate Haikus? Please. We Rhyme in Five Lines.
-    &lt;/h2&gt;
-&lt;p class="card-date"&gt;
+  </h2>
+<p class="card-date">
      June 8, 2025
-    &lt;/p&gt;
-&lt;p class="card-excerpt"&gt;
+  </p>
+<p class="card-excerpt">
      There once was a system from hell, where nothing would function too well...
-    &lt;/p&gt;
-&lt;/article&gt; --&gt;
+  </p>
+  </article> -->
    <article class="card blog-post">
     <div class="badge gold">
      Snarky Post
