--- a/card-components-parked.html
+++ b/card-components-parked.html
@@ -1,2 +1,15 @@
 <!-- Archived Cards for Future Use -->
 
+<article class="card dream-cast-card">
+  <div class="badge teal">Snarklevision Presents</div>
+  <h2>Mass Effect Dream Cast</h2>
+  <p class="card-date">June 10, 2025</p>
+  <p class="card-excerpt">Shepard, meet Hollywood. A casting exercise in emotional resonance and fan bliss.</p>
+</article>
+
+<article class="card limerick">
+  <div class="badge pink">Limericks of Doom</div>
+  <h2>Corporate Haikus? Please. We Rhyme in Five Lines.</h2>
+  <p class="card-date">June 8, 2025</p>
+  <p class="card-excerpt">There once was a system from hell, where nothing would function too well...</p>
+</article>
