--- a/posts.html
+++ b/posts.html
@@ -1,37 +1,40 @@
-<!-- Sample Blog Post Page with TL;DR -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <link href='https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&family=Work+Sans:wght@400;500&display=swap' rel='stylesheet'>
-  <style>
-    body { font-family: 'Work Sans', sans-serif; line-height: 1.6; padding: 2rem; }
-    h1, h2 { font-family: 'Raleway', sans-serif; }
-    details summary {
-      font-weight: bold;
-      font-size: 1.1rem;
-      cursor: pointer;
-      color: #2E003E;
-      margin-top: 1.5rem;
-    }
-    details {
-      background: #f4f4f4;
-      border-left: 4px solid #FFD700;
-      padding: 1rem;
-      margin-top: 1rem;
-      max-width: 600px;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>All Snarky Posts</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Work+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Brilliant Tech, Broken UX</h1>
-  <p>This is a sample post meant to showcase how the TL;DR block will look on the site.</p>
+  <header class="site-header">
+    <div class="header-inner">
+      <h1 class="site-title">SNARK FLOATS</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Snark</a></li>
+          <li><a href="about.html#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <details>
-    <summary>TL;DR</summary>
-    <ul>
-      <li>🚫 Brilliant Tech, Broken UX</li>
-      <li>🧠 Memory Feature That Forgets You Exist</li>
-      <li>🧃 Juice Not Worth the Squeeze</li>
-    </ul>
-  </details>
+  <main class="card-container">
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Why Copilots Crash</h2>
+      <p class="card-date">June 15, 2025</p>
+      <p class="card-excerpt">The tool that helps you build things... can't remember what it just built.</p>
+    </article>
+
+    <article class="card blog-post">
+      <div class="badge gold">Snarky Post</div>
+      <h2>Context Is Not Optional</h2>
+      <p class="card-date">June 18, 2025</p>
+      <p class="card-excerpt">In tech, in leadership, in AI—context isn’t just helpful. It’s survival.</p>
+    </article>
+  </main>
 </body>
 </html>
