--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <header class="site-header">
    <div class="header-inner">
     <h1 class="site-title">
-     SNARK FLOATS
+     <a href="index.html">
+      SNARK FLOATS
+     </a>
     </h1>
     <nav>
      <ul>
@@ -51,34 +53,34 @@
      The tool that helps you build things... can't remember what it just built.
     </p>
    </article>
-   <!-- <;article class="card dream-cast-card">;
-<div class="badge teal">
+   &lt;!-- &lt;article class="card dream-cast-card"&gt;
+&lt;div class="badge teal"&gt;
      Snarklevision Presents
-  </div>
-<h2>
+    &lt;/div&gt;
+&lt;h2&gt;
      Mass Effect Dream Cast
-  </h2>
-<p class="card-date">
+    &lt;/h2&gt;
+&lt;p class="card-date"&gt;
      June 10, 2025
-  </p>
-<p class="card-excerpt">
+    &lt;/p&gt;
+&lt;p class="card-excerpt"&gt;
      Shepard, meet Hollywood. A casting exercise in emotional resonance and fan bliss.
-  </p>
-  </article> -->
-   <!-- <article class="card limerick">
-<div class="badge pink">
+    &lt;/p&gt;
+&lt;/article&gt; --&gt;
+   &lt;!-- &lt;article class="card limerick"&gt;
+&lt;div class="badge pink"&gt;
      Limericks of Doom
-  </div>
-<h2>
+    &lt;/div&gt;
+&lt;h2&gt;
      Corporate Haikus? Please. We Rhyme in Five Lines.
-  </h2>
-<p class="card-date">
+    &lt;/h2&gt;
+&lt;p class="card-date"&gt;
      June 8, 2025
-  </p>
-<p class="card-excerpt">
+    &lt;/p&gt;
+&lt;p class="card-excerpt"&gt;
      There once was a system from hell, where nothing would function too well...
-  </p>
-  </article> -->
+    &lt;/p&gt;
+&lt;/article&gt; --&gt;
    <article class="card blog-post">
     <div class="badge gold">
      Snarky Post
