--- a/posts.html
+++ b/posts.html
@@ -1,40 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>All Snarky Posts</title>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Work+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   All Snarky Posts
+  </title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&amp;family=Work+Sans&amp;display=swap" rel="stylesheet"/>
+  <link href="style.css" rel="stylesheet"/>
+ </head>
+ <body>
   <header class="site-header">
-    <div class="header-inner">
-      <h1 class="site-title">SNARK FLOATS</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Snark</a></li>
-          <li><a href="about.html#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
+   <div class="header-inner">
+    <h1 class="site-title">
+     <a href="index.html">
+      SNARK FLOATS
+     </a>
+    </h1>
+    <nav>
+     <ul>
+      <li>
+       <a href="posts.html">
+        Snarky Posts
+       </a>
+      </li>
+      <li>
+       <a href="about.html">
+        About Snark
+       </a>
+      </li>
+      <li>
+       <a href="about.html#contact">
+        Contact
+       </a>
+      </li>
+     </ul>
+    </nav>
+   </div>
   </header>
-
   <main class="card-container">
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>Why Copilots Crash</h2>
-      <p class="card-date">June 15, 2025</p>
-      <p class="card-excerpt">The tool that helps you build things... can't remember what it just built.</p>
-    </article>
-
-    <article class="card blog-post">
-      <div class="badge gold">Snarky Post</div>
-      <h2>Context Is Not Optional</h2>
-      <p class="card-date">June 18, 2025</p>
-      <p class="card-excerpt">In tech, in leadership, in AI—context isn’t just helpful. It’s survival.</p>
-    </article>
+   <article class="card blog-post">
+    <div class="badge gold">
+     Snarky Post
+    </div>
+    <h2>
+     Why Copilots Crash
+    </h2>
+    <p class="card-date">
+     June 15, 2025
+    </p>
+    <p class="card-excerpt">
+     The tool that helps you build things... can't remember what it just built.
+    </p>
+   </article>
+   <article class="card blog-post">
+    <div class="badge gold">
+     Snarky Post
+    </div>
+    <h2>
+     Context Is Not Optional
+    </h2>
+    <p class="card-date">
+     June 18, 2025
+    </p>
+    <p class="card-excerpt">
+     In tech, in leadership, in AI—context isn’t just helpful. It’s survival.
+    </p>
+   </article>
   </main>
-</body>
+ </body>
 </html>
