--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
     </nav>
    </div>
   </header>
+  <section class="site-intro">
+   <img alt="Snark Floats banner with colorful balloons" class="hero-banner" src="snark_floats_banner.webp"/>
+   <h2>
+    Welcome to Snark Floats
+   </h2>
+   <p>
+    I’m not here to hold your hand. This is the place where I drag my own half-drowned thoughts onto a life raft made of sarcasm, sharp humor, and stubborn honesty — and if you want to climb aboard, you’re welcome.
+   </p>
+   <p>
+    This isn’t a public service. It’s survival. I call bullshit where I see it — on bad tech, bad storytelling, bad history, corporate evil, and the small stupid things that try to sink us all.
+   </p>
+   <p>
+    Life’s a mess. Snark floats. Grab a seat if you can handle it. If not, there are plenty of other lifeboats out there, filled with Pinterest quotes and toxic positivity. Good luck. You’ll need it…
+   </p>
+  </section>
   <main class="card-container">
    <article class="card blog-post">
     <div class="badge gold">
