--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    </div>
   </header>
   <section class="site-intro">
-   <img alt="Snark Floats banner with colorful balloons" class="hero-banner" src="snark_floats_banner.webp"/>
+   <img alt="Snark Floats banner with colorful balloons" class="hero-banner" src="images/main/snark_floats_banner.webp"/>
    <h2>
     Welcome to Snark Floats
    </h2>
