--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </header>
   <section class="site-intro">
    <img alt="Snark Floats banner with colorful balloons" class="hero-banner" src="images/main/snark_floats_banner.webp"/>
-   <h2>
+   <h2 class="intro-heading">
     Welcome to Snark Floats
    </h2>
    <p>
