--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&amp;family=Work+Sans&amp;display=swap" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
  </head>
  <body>
   <header class="site-header">
