--- a/posts.html
+++ b/posts.html
@@ -38,6 +38,11 @@
     </nav>
    </div>
   </header>
+  <section class="site-intro">
+   <p>
+    I post when the mood strikes—usually when the snark is strong and the nonsense is louder than usual.
+   </p>
+  </section>
   <main class="card-container">
    <article class="card blog-post">
     <div class="badge gold">
