--- a/posts.html
+++ b/posts.html
@@ -39,6 +39,9 @@
    </div>
   </header>
   <section class="site-intro">
+   <h2 class="intro-heading">
+    Snarky Posts
+   </h2>
    <p>
     I post when the mood strikes—usually when the snark is strong and the nonsense is louder than usual.
    </p>
