--- a/index.html
+++ b/index.html
@@ -84,5 +84,15 @@
     </p>
    </article>
   </main>
+  <footer class="site-footer">
+   <p>
+    © 2025 Snark Floats. All sarcasm reserved.
+   </p>
+  </footer>
+  <footer class="site-footer">
+   <p>
+    © 2025 Snark Floats. All sarcasm reserved.
+   </p>
+  </footer>
  </body>
 </html>
