--- a/posts.html
+++ b/posts.html
@@ -76,5 +76,10 @@
     </p>
    </article>
   </main>
+  <footer class="site-footer">
+   <p>
+    © 2025 Snark Floats. All sarcasm reserved.
+   </p>
+  </footer>
  </body>
 </html>
