--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>
    Snark Floats
   </title>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&amp;family=Work+Sans&amp;display=swap" rel="stylesheet"/>
+  <link href="style-with-footer.css" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
  </head>
@@ -84,11 +84,6 @@
     </p>
    </article>
   </main>
-  <footer class="site-footer">
-   <p>
-    © 2025 Snark Floats. All sarcasm reserved.
-   </p>
-  </footer>
   <footer class="site-footer">
    <p>
     © 2025 Snark Floats. All sarcasm reserved.
