--- a/posts.html
+++ b/posts.html
@@ -6,7 +6,7 @@
   <title>
    All Snarky Posts
   </title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
+  <link href="style-with-footer.css" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
  </head>
  <body>
