--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
    </article>
   </main>
   <footer class="site-footer">
-   <p>
-    © 2025 Snark Floats. All sarcasm reserved.
-   </p>
+   <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
   </footer>
  </body>
 </html>
