--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
      Snarky Post
     </div>
     <h2>
-     Why Copilots Crash
+     OpenAI Built the Ultimate Tool. But Clippy Might Still Win.
     </h2>
     <p class="card-date">
-     June 15, 2025
+     June 18, 2025
     </p>
     <p class="card-excerpt">
-     The tool that helps you build things... can't remember what it just built.
+     OpenAI has built the most powerful AI on the planet, but brilliance alone doesn’t make a great product. Without better UX, memory handling, and real workflow support, ChatGPT risks being outpaced by dumber tools that just work.<br />
+     The future of AI shouldn’t belong to Clippy, but without better product thinking, it just might.
     </p>
    </article>
    <article class="card blog-post">
