--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
      OpenAI Built the Ultimate Tool. But Clippy Might Still Win.
     </h2>
     <p class="card-date">
-     June 18, 2025
+     June 15, 2025
     </p>
     <p class="card-excerpt">
      OpenAI has built the most powerful AI on the planet, but brilliance alone doesn’t make a great product. Without better UX, memory handling, and real workflow support, ChatGPT risks being outpaced by dumber tools that just work.<br />
@@ -74,13 +74,13 @@
      Snarky Post
     </div>
     <h2>
-     Context Is Not Optional
+     Don’t be the Tool in Your AI Relationship: AI Works Better as a Companion
     </h2>
     <p class="card-date">
-     June 18, 2025
+     June 19, 2025
     </p>
     <p class="card-excerpt">
-     In tech, in leadership, in AI—context isn’t just helpful. It’s survival.
+     You’re not using AI wrong. You’re just using it like a smart toaster. If you want results beyond warm output and emoji-laden bulleted lists, treat it like a collaborator. Talk to it. Teach it. Trust it. Then watch what happens...
     </p>
    </article>
   </main>
