--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>
    Snark Floats
   </title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&amp;family=Work+Sans&amp;display=swap" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
  </head>
  <body>
   <header class="site-header">
@@ -38,54 +38,63 @@
     </nav>
    </div>
   </header>
-  <section class="site-intro">
-   <img alt="Snark Floats banner with colorful balloons" class="hero-banner" src="images/main/snark_floats_banner.webp"/>
-   <h2 class="intro-heading">
-    Welcome to Snark Floats
-   </h2>
-   <p>
-    I’m not here to hold your hand. This is the place where I drag my own half-drowned thoughts onto a life raft made of sarcasm, sharp humor, and stubborn honesty — and if you want to climb aboard, you’re welcome.
-   </p>
-   <p>
-    This isn’t a public service. It’s survival. I call bullshit where I see it — on bad tech, bad storytelling, bad history, corporate evil, and the small stupid things that try to sink us all.
-   </p>
-   <p>
-    Life’s a mess. Snark floats. Grab a seat if you can handle it. If not, there are plenty of other lifeboats out there, filled with Pinterest quotes and toxic positivity. Good luck. You’ll need it…
-   </p>
-  </section>
   <main class="card-container">
    <article class="card blog-post">
     <div class="badge gold">
      Snarky Post
     </div>
     <h2>
-     OpenAI Built the Ultimate Tool. But Clippy Might Still Win.
+     Why Copilots Crash
     </h2>
     <p class="card-date">
      June 15, 2025
     </p>
     <p class="card-excerpt">
-     OpenAI has built the most powerful AI on the planet, but brilliance alone doesn’t make a great product. Without better UX, memory handling, and real workflow support, ChatGPT risks being outpaced by dumber tools that just work.<br />
-     The future of AI shouldn’t belong to Clippy, but without better product thinking, it just might.
+     The tool that helps you build things... can't remember what it just built.
     </p>
    </article>
+   &lt;!-- &lt;article class="card dream-cast-card"&gt;
+&lt;div class="badge teal"&gt;
+     Snarklevision Presents
+    &lt;/div&gt;
+&lt;h2&gt;
+     Mass Effect Dream Cast
+    &lt;/h2&gt;
+&lt;p class="card-date"&gt;
+     June 10, 2025
+    &lt;/p&gt;
+&lt;p class="card-excerpt"&gt;
+     Shepard, meet Hollywood. A casting exercise in emotional resonance and fan bliss.
+    &lt;/p&gt;
+&lt;/article&gt; --&gt;
+   &lt;!-- &lt;article class="card limerick"&gt;
+&lt;div class="badge pink"&gt;
+     Limericks of Doom
+    &lt;/div&gt;
+&lt;h2&gt;
+     Corporate Haikus? Please. We Rhyme in Five Lines.
+    &lt;/h2&gt;
+&lt;p class="card-date"&gt;
+     June 8, 2025
+    &lt;/p&gt;
+&lt;p class="card-excerpt"&gt;
+     There once was a system from hell, where nothing would function too well...
+    &lt;/p&gt;
+&lt;/article&gt; --&gt;
    <article class="card blog-post">
     <div class="badge gold">
      Snarky Post
     </div>
     <h2>
-     Don’t be the Tool in Your AI Relationship: AI Works Better as a Companion
+     Context Is Not Optional
     </h2>
     <p class="card-date">
-     June 19, 2025
+     June 18, 2025
     </p>
     <p class="card-excerpt">
-     You’re not using AI wrong. You’re just using it like a smart toaster. If you want results beyond warm output and emoji-laden bulleted lists, treat it like a collaborator. Talk to it. Teach it. Trust it. Then watch what happens...
+     In tech, in leadership, in AI—context isn’t just helpful. It’s survival.
     </p>
    </article>
   </main>
-  <footer class="site-footer">
-   <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
-  </footer>
  </body>
 </html>
