--- a/posts.html
+++ b/posts.html
@@ -6,6 +6,7 @@
   <title>
    All Snarky Posts
   </title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&amp;display=swap" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet"/>
  </head>
  <body>
@@ -37,14 +38,6 @@
     </nav>
    </div>
   </header>
-  <section class="site-intro">
-   <h2 class="intro-heading">
-    Snarky Posts
-   </h2>
-   <p>
-    I post when the mood strikes—usually when the snark is strong and the nonsense is louder than usual.
-   </p>
-  </section>
   <main class="card-container">
    <article class="card blog-post">
     <div class="badge gold">
@@ -75,8 +68,5 @@
     </p>
    </article>
   </main>
-  <footer class="site-footer">
-   <p>&copy; 2025 Jenifer Jorgenson. All sarcasm (and rights) reserved.</p>
-  </footer>
  </body>
 </html>
